added css for home page and fix the header and footer

--- a/Whole/css/home-general.css
+++ b/Whole/css/home-general.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   background-color: black;
+  height: 10000px;
 }
 
 p {
@@ -10,4 +11,18 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  z-index: 100;
+}
+
+.active{
+  text-decoration: underline;
+  color: orange;
 }
