--- a/Whole/css/home-body.css
+++ b/Whole/css/home-body.css
@@ -4,20 +4,27 @@
   align-items: center;
   width: 100%;
   min-height: 100vh;
-  top: 0;
+}
+.bg .body-bg {
+  filter: brightness(0.6);
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
 }
 
 .relative {
   position: relative;
   top: -58px;
 }  .relative:before{
-    content: "";
+    content:"";
+    background: linear-gradient(to bottom, black, transparent);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 30px;
-    background: linear-gradient(to top, transparent, black);
+    height: 100px;
     pointer-events: none;
     }
 
@@ -27,14 +34,14 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 300px;
-    background: linear-gradient(to bottom, transparent, black);
+    height: 600px;
+    background: linear-gradient(to top, black, transparent);
     pointer-events: none;
     }
 
 .poet {
   position: absolute;
-  top: 400px;
+  top: 300px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -49,28 +56,21 @@
   color: #e7fdfff5;
   font-size: 40px;
   position: absolute;
-  bottom:  350px;
-  right:770px;
+  top: 500px;
+  left: 50%;
   border-style: solid;
   border-radius: 10px;
-  padding:10px;
+  padding: 10px 20px;
   cursor: pointer;
   transition: all 0.3s ease;
-  font-weight: bolder;
+  transform: translateX(-50%);
+  z-index: 100;
+  opacity: 0.8;
 } .watch-trailer:hover{
-    transform: scale(1.1);
+    transform: translateX(-50%) scale(1.1);
     background-color: rgba(255, 255, 255, 0.2); 
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);  
 }
-
-.bg .body-bg {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  display: block;
-}
-
 
 /* section 2 */
 
@@ -89,4 +89,3 @@ footer .middle a{
 .apps{
   color: white;
 }
-
