--- a/Whole/css/about-us.css
+++ b/Whole/css/about-us.css
@@ -9,7 +9,7 @@
 
 .relative {
   position: relative;
-  top: -58px;
+  top: -450px;
 }  .relative:before{
     content: "";
     position: absolute;
@@ -51,4 +51,23 @@
   height: auto;
   object-fit: cover;
   display: block;
+}
+
+.page-header {
+    position: absolute;
+  bottom: 200px;
+  right: 280px;
+  left: 280px;
+}
+.page-header h1 {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page-header h2 {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
