--- a/Whole/css/home-body.css
+++ b/Whole/css/home-body.css
@@ -54,18 +54,18 @@
 
 .watch-trailer{
   color: #e7fdfff5;
-  font-size: 40px;
+  font-size: 30px;
   position: absolute;
-  top: 500px;
+  top: 60%;
   left: 50%;
   border-style: solid;
-  border-radius: 10px;
+  border-radius: 50px;
   padding: 10px 20px;
   cursor: pointer;
   transition: all 0.3s ease;
   transform: translateX(-50%);
   z-index: 100;
-  opacity: 0.8;
+  opacity: 0.9;
 } .watch-trailer:hover{
     transform: translateX(-50%) scale(1.1);
     background-color: rgba(255, 255, 255, 0.2); 
@@ -74,18 +74,43 @@
 
 /* section 2 */
 
-.section-2, footer .middle{
+.apps, .apps-title {
   display: flex;
   flex-direction: row;
-  padding-top: 10px;
+  padding-top: 0px;
   justify-content: center;
   align-items: center;
+  gap: 200px;
 }
 
-footer .middle a{
+
+.apps-title{
   color: white;
-  text-decoration: none;
+  font-size: 50px;
+  font-family: Orbitron;
+  padding-bottom: 50px;
 }
-.apps{
-  color: white;
-}
+.apps img{
+  filter: brightness(0) invert(1);
+  width: 100px;
+  cursor: pointer;
+  padding-bottom: 100px;
+} 
+
+.get-now{
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  border: 2px solid white;
+  border-radius: 10px;
+  background-color: rgb(243, 183, 70);
+  padding: 15px 40px;
+  font-size: 30px;
+  font-family: Orbitron;
+  width: fit-content;
+  margin: 0 auto 100px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+} .get-now:hover{
+    transform: scale(1.5);
+    box-shadow: 0 0 20px white;
+  }
