--- a/Whole/css/contact.css
+++ b/Whole/css/contact.css
@@ -1,3 +1,32 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: black;
+  height: 10000px;
+}
+
+p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  z-index: 100;
+}
+
+.active{
+  text-decoration: underline;
+  color: orange;
+}
+
 .bg {
   display: flex;
   justify-content: center;
@@ -51,4 +80,36 @@
   height: auto;
   object-fit: cover;
   display: block;
+}
+.page-header {
+  position: absolute;
+  bottom: -130px;
+  right: 280px;
+  left: 280px;
+}
+.page-header h1 {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: -2%;
+  line-height: 100%;
+  font-size: 50px;
+}
+.page-header h2 {
+  color: #ffba69;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: -1.5%;
+  line-height: 110%;
+}
+.page-header p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: default;
+  line-height: 150%;
+  font-family: "Inter";
 }
