--- a/Whole/css/contact.css
+++ b/Whole/css/contact.css
@@ -113,3 +113,54 @@ p {
   line-height: 150%;
   font-family: "Inter";
 }
+.boxs {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+
+}
+.boxs .box {
+display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 400px;
+  width: 300px;
+  border-radius: 10px;
+  border: solid #ffa947;
+  color: white; 
+  cursor: pointer;
+  transition: 400ms;
+    font-size: 25px;
+}
+.boxs .box:hover {
+  transform: scale(1, 1);
+
+}
+
+.boxs:hover > .box:not(:hover) {
+  transform: scale(0.9, 0.9);
+}
+
+button {
+  background-color: black;
+  border:solid #ffffff;
+  border-radius: 8px;
+  width: 230px;
+  height: 50px;
+  color: white;
+  background-color: #ffa947;
+  transition: 400ms;
+  font-size: 20px;
+   padding: 15px 25px;
+}
+button:hover {
+  transform: scale(1.1, 1.1); 
+  cursor: pointer;
+}
+button:active {
+  transform: scale(1, 1); ;
+}
