--- a/Whole/css/contact.css
+++ b/Whole/css/contact.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   background-color: black;
-  height: 10000px;
+  height: auto;
 }
 
 p {
@@ -14,12 +14,13 @@ p {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: black;
-  z-index: 100;
+  height: 50px;
+  background-color: #242424;
+  padding-top: 5px;
 }
 
 .active{
@@ -31,9 +32,11 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+ max-width: 100%;
   width: 100%;
-  min-height: 100vh;
-  top: 0;
+  height: auto;
+  object-fit: cover;
+  display: block;
 }
 
 .relative {
@@ -104,22 +107,12 @@ p {
   letter-spacing: -1.5%;
   line-height: 110%;
 }
-.page-header p {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  letter-spacing: default;
-  line-height: 150%;
-  font-family: "Inter";
-}
 .boxs {
   display: flex;
   flex-direction: row;
   gap: 40px;
   align-items: center;
   justify-content: center;
-
 }
 .boxs .box {
 display: flex;
@@ -127,7 +120,7 @@ display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  height: 400px;
+  height: 430px;
   width: 300px;
   border-radius: 10px;
   border: solid #ffa947;
@@ -156,6 +149,9 @@ button {
   transition: 400ms;
   font-size: 20px;
    padding: 15px 25px;
+   align-items: center;
+  justify-content: center;
+  display: flex;
 }
 button:hover {
   transform: scale(1.1, 1.1); 
@@ -163,4 +159,66 @@ button:hover {
 }
 button:active {
   transform: scale(1, 1); ;
+}
+
+.boxs .box p.tip {
+display: flex;
+color: #ffa947;
+font-size: 40px;
+margin: 10px; 
+}
+
+.boxs .box p.second-text {
+  display: flex;
+  padding: 20px;
+  height: 200px;
+}
+#feed {
+  height: 50px;
+}
+.icons {
+align-items: center;
+justify-content: center;
+display: flex;
+}
+.media-icons{
+  filter: invert(58%) sepia(85%) saturate(2400%) hue-rotate(352deg) brightness(101%) contrast(105%);
+  width: 5%;
+  height: auto;
+  cursor: pointer;
+  margin-left: 30px;
+  margin-right: 30px;
+  display: flex;
+  transition: 400ms;
+}
+.media-icons:hover {
+   transform: scale(1.1, 1.1);
+}
+.media-icons:active {
+  filter: brightness(0) invert(1);
+  transform: scale(1, 1);
+}
+#followus{
+color: white;
+ display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 30px;
+}
+#email {
+  color: #ffa947;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  font-size: 30px;
+}
+#gmail {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -40px;
+  font-size: 23px;
 }
