--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -18,7 +18,7 @@ h2 {
   color: #ffba69;
   text-align: center;
   font-size: 24px;
-  margin-bottom: 240px;
+  margin-bottom: 150px;
 }
 
 h3 {
@@ -41,6 +41,16 @@ p {
   margin-top: 5px;
   color: white;
   text-align: center;
+}
+/* Line Image */
+.line-img {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+  height: 0px;
+  flex-wrap: nowrap;
+  margin-bottom: 10px;
 }
 
 /* Boxes container - FIXED */
