--- a/css/game.css
+++ b/css/game.css
@@ -3,12 +3,11 @@ body{
 }
 
 
-/* header */
 .header-nav {
   position: fixed;
   top: 0;
   left: 0;
-  bottom: auto;
+  bottom: 92%;
   width: 100%;
   background-color: rgba(43, 42, 42, 0.9);
   backdrop-filter: blur(10px);
@@ -19,7 +18,6 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 2000px;
   position: relative;
 } 
 
@@ -88,6 +86,35 @@ body{
 
 .center-nav:has(a:hover) a:not(:hover) {
   opacity: 0.5;
+}
+
+.right-nav {
+  color: white;
+  font-family: 'Orbitron';
+  font-size: 14px;
+  font-weight: 600;
+  background-color: rgb(243, 183, 70);
+  border: 2px solid rgb(243, 183, 70);
+  border-radius: 25px;
+  padding: 8px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  padding-right: 20px;
+}
+
+.right-nav:hover {
+  background-color: transparent;
+  color: rgb(243, 183, 70);
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(243, 183, 70, 0.5);
+}
+
+.header .right-nav{
+  margin-left: 100px;
+}
+
+.center-nav .active{
+  color: orange;
 }
 
 
