--- a/css/game.css
+++ b/css/game.css
@@ -1,5 +1,7 @@
 body{
   height: 10000px;
+  margin: 0;
+  background-color: black;
 }
 
 
@@ -121,7 +123,38 @@ body{
 
 /* body */
 
-
+.background{
+  margin: 0;
+  padding: 0;
+  position: relative;
+  background-color: black;
+}
+.background-img img{
+  width: 100%;
+  height: 200px;
+  display: block;
+  object-fit: cover;
+} .background::before{
+  content:"";
+  background: linear-gradient(to bottom, black, transparent);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  pointer-events: none;
+  z-index: 1;
+} .background::after{
+  content:"";
+  background: linear-gradient(to top, black, transparent);
+  position:absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px; 
+  pointer-events: none;
+  z-index: 1;
+}
 
 
 
@@ -160,17 +193,3 @@ p {
   align-items: center;
 }
 
-.second-border {
-  background: linear-gradient(to top, black, transparent);
-  padding: 20px 575px;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  position: fixed;
-
-
-}
-
-.second-border p {
-  opacity: 0.6;
-  font-size: 12px;
-  letter-spacing: 1px;
-}
