--- a/css/game.css
+++ b/css/game.css
@@ -123,7 +123,7 @@ body{
 
 /* body */
 
-.background{
+.background-img{
   margin: 0;
   padding: 0;
   position: relative;
@@ -151,7 +151,7 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 150px; 
+  height:20px; 
   pointer-events: none;
   z-index: 1;
 }
