--- a/css/game.css
+++ b/css/game.css
@@ -196,7 +196,7 @@ body{
 .content-paragraph{
   width: 35%;
   text-align: center;
-  color: rgb(236, 173, 0);
+  color: #ffba69;
   font-family: inter 400;
 }
 
