--- a/css/game.css
+++ b/css/game.css
@@ -310,7 +310,7 @@ body{
   border-style: solid;
   border-width:5px;
   padding: 10px 100px 10px 100px;
-  border-radius: 10%;
+  border-radius: 10px;
 } 
 
 .box h1{
