--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -7,41 +7,7 @@ body {
 }
 
 /* Header styles */
-h1 {
-  color: white;
-  text-align: center;
-  font-size: 50px;
-  margin-top: 200px;
-}
 
-h2 {
-  color: #ffba69;
-  text-align: center;
-  font-size: 24px;
-  margin-bottom: 150px;
-}
-
-h3 {
-  color: white;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  font-size: 30px;
-}
-
-h4 {
-  color: #ffa947;
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 5px;
-  font-size: 30px;
-}
-
-p {
-  margin-top: 5px;
-  color: white;
-  text-align: center;
-}
 /*Background*/
 .background-img{
   margin: 0;
@@ -86,7 +52,7 @@ p {
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: 35px;
+  font-size: 2.4vw;
   margin-bottom:250px;
   padding-top: 5%;
   opacity: 0;
@@ -146,7 +112,7 @@ p {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  height: 450px;
+  height: auto;
   width: 300px;
   border-radius: 10px;
   border: 10px solid #ffa947;
@@ -157,7 +123,6 @@ p {
 .feedback .tip{
   height: 50px;
 }
-
 .box > div:hover {
   transform: scale(1.05);
 }
@@ -171,7 +136,7 @@ button{
   border-radius: 8px;
   height: 100px;
   width: 250px;
-  font-size: 30px;
+  font-size: 2.2vw;
   font-weight: bolder;
   color: white;
   transition: 400ms;
@@ -192,17 +157,17 @@ button:active{
 /* Tip text */
 .tip {
   color: #ffa947 !important;
-  font-size: 40px;
+  font-size: 3vw;
   font-weight: 900;
   text-align: center;
 }
 
 /* Second text */
 .second-text {
-  font-size: 16px;
+  font-size: 1.3vw;
   line-height: 1.5;
   padding: 20px;
-  height: 300px;
+  height: 200px;
 }
 
 /* Media icons */
@@ -259,6 +224,20 @@ button:active{
   opacity: 1;
   transform: translateY(0);
 }
+.email h4 {
+  color: #ffa947;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 5px;
+  font-size: 2vw;
+}
+
+.email p {
+  margin-top: 5px;
+  font-size: 1.5vw;
+  color: white;
+  text-align: center;
+}
 
 
 
@@ -287,4 +266,10 @@ button:active{
   width: 100%;
   background-color: black;
   z-index: 100;
+}
+p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
