--- a/css/about-us.css
+++ b/css/about-us.css
@@ -144,19 +144,303 @@ p {
     height: 120px;
     font-family: Inter;
   }
+  /* footer */
+.footer {
+  background: linear-gradient(to top, black, transparent);
+  padding: 20px 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  z-index: 100;
+}
+
+.footer p {
+  opacity: 0.6;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* Mobile */
-@media (min-width: 425px) {
+@media (min-width: 320px) and (max-width: 768px) {
+.background-img img {
+    height: 300px;
+  }
 
+  .background-img::before {
+    height: 80px;
+  }
 
+  .background-img::after {
+    height: 120px;
+  }
+  .content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 18px;
+  margin-bottom:100px;
+  padding-top: 5%;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+.content-header{
+  width: 45%;
+  text-align: center; 
+  margin: 0;
+  font-family: Orbitron;
+} 
+.content-subheader{
+  color: #ffba69;
+  width: 80%;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  font-size: 18px;
+}
+.content-paragraph{
+  width: 80%;
+  text-align: center;
+  font-family: inter 400;
+  font-size: 18px;
+  margin-bottom: 80px;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+  }
+  .box.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .individual-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 100px;
+    width: 80%;
+    border-radius: 10px;
+    color: white;
+    transition: 400ms;
+  }
+  .tip{
+    color: #ffba69;
+    font-size: 38px;
+    font-weight: bolder;
+    font-family: Inter;
+  }
+  .second-text{
+    font-size: 18px;
+    text-align: left;
+    height: 100px;
+    margin-bottom: 10px;
+    font-family: Inter;
+  }
+  #last-text{
+    margin-bottom: 300px;
+  }
+  #last-text p{
+    height: 140px;
+  }
 }
 /* Laptop */
-@media (min-width: 1024px) {
+@media (min-width: 769px) and (max-width: 2559px)  {
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 35px;
+  margin-bottom:100px;
+  padding-top: 5%;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+.content-header{
+  width: 45%;
+  text-align: center; 
+  margin: 0;
+  font-family: Orbitron;
+} 
+.content-subheader{
+  color: #ffba69;
+  width: 40%;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 80px;
+  font-size: 35px;
+}
+.content-paragraph{
+  width: 60%;
+  text-align: center;
+  font-family: inter 400;
+  font-size: 28px;
+}
+.box{
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+  }
+  .box.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .individual-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    width: 380px;
+    border-radius: 10px;
+    color: white;
+    transition: 400ms;
+    margin-bottom: 180px;
+  }
+  .tip{
+    color: #ffba69;
+    font-size: 38px;
+    font-weight: bolder;
+    font-family: Inter;
+  }
+  .second-text{
+    font-size: 23px;
+    text-align: left;
+    height: 250px;
+    font-family: Inter;
+  }
+  /* footer */
+.footer {
+  background: linear-gradient(to top, black, transparent);
+  padding: 20px 20px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
 
-  
+.footer p {
+  opacity: 0.6;
+  font-size: 11px;
+  letter-spacing: 1px;
+}
+
+.footer {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+    z-index: 100;
+}
+p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 }
 
 /* Desktop (2K) */
-@media (min-width: 2560px) {
-
-
+@media (min-width: 2560px) and (max-width: 3000px) {
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 55px;
+  margin-bottom:200px;
+  padding-top: 5%;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+.content-header{
+  width: 45%;
+  text-align: center; 
+  margin: 0;
+  font-family: Orbitron;
+} 
+.content-subheader{
+  color: #ffba69;
+  width: 40%;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 200px;
+  font-size: 55px;
+}
+.content-paragraph{
+  width: 70%;
+  text-align: center;
+  font-family: inter 400;
+  font-size: 50px;
+}
+.box{
+    display: flex;
+    flex-direction: row;
+    gap: 200px;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 1s ease-out, transform 1s ease-out;
+  }
+  .box.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .individual-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    width: 600px;
+    border-radius: 10px;
+    color: white;
+    transition: 400ms;
+    margin-bottom: 300px;
+  }
+  .tip{
+    color: #ffba69;
+    font-size: 80px;
+    font-weight: bolder;
+    font-family: Inter;
+  }
+  .second-text{
+    font-size: 40px;
+    text-align: left;
+    height: 350px;
+    font-family: Inter;
+  }
 }
